# pcktool-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
crates/pcktool/: Cargo.toml
crates/pcktool-cli/: Cargo.toml
crates/pcktool-cli/src/: main.rs
crates/pcktool-cli/src/commands/: dump.rs  info.rs  list.rs  mod.rs
crates/pcktool/src/: error.rs  hash.rs  lib.rs
crates/pcktool/src/bnk/: chunks.rs  mod.rs
crates/pcktool/src/bnk/hirc/: mod.rs  reader.rs  types.rs  writer.rs
crates/pcktool/src/bnk/hirc/items/: action.rs  bus.rs  containers.rs  fx.rs  misc.rs  mod.rs  music.rs  sound.rs
crates/pcktool/src/bnk/hirc/params/: action.rs  bus.rs  decision_tree.rs  mod.rs  music.rs  node.rs  plugin.rs  props.rs  rtpc.rs  source.rs  state.rs
crates/pcktool/src/pck/: entry.rs  mod.rs  string_map.rs  writer.rs
crates/pcktool/tests/: round_trip.rs
